# mbzirc

./: README.md
mag_serial/: CMakeLists.txt  package.xml
mag_serial/arduino/: structs_functions.h
mag_serial/arduino/magnetic_pwm_serial/: header.h  magnetic_pwm_serial.ino  structs_functions.h
mag_serial/magnetic_pwm_serial/: magnetic_pwm_serial.ino
mag_serial/src/: .DefineList.h.swo  CommModule.h  DefineList.h  MAG_serial_node.cpp  mag_serial_node.cpp
mbzirc/: package.xml
mbzirc_brick_pose/: CMakeLists.txt  package.xml
mbzirc_brick_pose/launch/: estimate_pose_2d.launch  rs_rgbd.launch
mbzirc_brick_pose/src/: estimate_pose_2d.cpp  rgbd_demo.cpp
mbzirc_brick_pose_2d/: CMakeLists.txt  package.xml
mbzirc_brick_pose_2d/launch/: estimate_pose_2d.launch
mbzirc_brick_pose_2d/msg/: flag.msg
mbzirc_challenge2/: CMakeLists.txt  package.xml
mbzirc_challenge2/arduino/: magnetic_pwm_ros.ino
mbzirc_challenge2/arduino/control_relay_ros/: control_relay_ros.ino
mbzirc_challenge2/arduino/magnetic_pwm_ros/: magnetic_pwm_ros.ino
mbzirc_challenge2/arduino/switch_ros/: microSwitchSample.ino
mbzirc_challenge2/launch/: move_group_interface_tutorial.launch  sim.launch  ur5_gazebo_mbzirc.launch  ur5_mbzirc.launch
mbzirc_challenge2/msg/: BoxInfo.msg
mbzirc_challenge2/script/: ur_script_control.py
mbzirc_challenge2/src/: mbzirc_ur5_control (copy).cpp  mbzirc_ur5_control copy.cpp  mbzirc_ur5_control.cpp  move_group_interface_tutorial.cpp
mbzirc_goto_brick/: CMakeLists.txt  package.xml
mbzirc_goto_brick/launch/: goto_brick.launch  goto_fire.launch
mbzirc_goto_brick/scripts/: goto_brick.py  goto_fire.py
mbzirc_msgs/: CMakeLists.txt  package.xml
mbzirc_msgs/action/: CounterWithDelay.action
mbzirc_msgs/msg/: CounterWithDelayAction.msg  CounterWithDelayActionFeedback.msg  CounterWithDelayActionGoal.msg  CounterWithDelayActionResult.msg  CounterWithDelayFeedback.msg  CounterWithDelayGoal.msg  CounterWithDelayResult.msg  ObjectDetection.msg  SensorInformation.msg
mbzirc_msgs/srv/: drop_blanket.srv  go_to_brick.srv  place_in_container.srv  request_layers.srv  ur_move.srv  visual_servo_XY.srv  visual_servo_yaw.srv
mbzirc_navigation/: CMakeLists.txt  package.xml
mbzirc_navigation/cfg/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
mbzirc_navigation/launch/: hdl_graph_slam_ki.launch  hdl_localization.launch  move_base.launch  move_base_teb.launch
mbzirc_navigation/map/: KI_1F_ouster.pgm  KI_1F_ouster.yaml  KI_2F_ouster.bt  KI_2F_ouster.yaml  map.pgm
mbzirc_navigation/rviz/: mbzirc_navigation.rviz
mbzirc_robot/: CMakeLists.txt  package.xml
mbzirc_robot/src/: mbzirc_robot_node.cpp
mbzirc_usrg/: CMakeLists.txt  package.xml
mbzirc_usrg_brick_pose_2d/: CMakeLists.txt  offset  package.xml
mbzirc_usrg_brick_pose_2d/msg/: block_pose.msg
mbzirc_usrg_brick_pose_2d/src/: estimate_pose_2d.cpp
mbzirc_usrg_challenge2/: CMakeLists.txt  CMakeListsbackup.txt  package.xml
mbzirc_usrg_challenge2/launch/: arm.launch  move_group_interface_tutorial.launch
mbzirc_usrg_challenge2/src/: #mbzirc_ur5_control.cpp#  mbzirc_ur5_control.cpp  talker.cpp
mbzirc_usrg_wheel_control/: CMakeLists.txt  package.xml
mbzirc_wheel_control/: CMakeLists.txt  package.xml
mbzirc_wheel_control/config/: ps3-holonomic.config.yaml  steer.yaml  twist_mux.yaml  twist_mux_locks.yaml
mbzirc_wheel_control/launch/: 4_wheel_control.launch  differential_joy.launch  dynamixel_test.launch  joy.launch  joy_control.launch  mbzirc_odrive.launch  microstrain.launch  os1.launch  steer_controllers.launch  teleop.launch  wheel_control.launch
mbzirc_wheel_control/rviz/: sensor_monitoring.rviz
mbzirc_wheel_control/script/: control_steer_hub.py  hub_motor_calibration.py  hub_motor_control.py  hub_motor_setup.py  joint_publisher.py  my_config.json  twist2diff.py
mbzirc_wheel_control/src/: wheel_control.cpp
mission_manager/: CMakeLists.txt  package.xml
mission_manager/launch/: drone.launch
mission_manager/src/: mission.h  mission_manager.cpp  mission_manager_v2.cpp
mission_manager/srv/: ugv_move.srv  ur_move.srv
navi/: CMakeLists.txt  package.xml
navi/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
navi/launch/: control.launch  move_base_nav_continuous.launch  outdoor_nav.launch
navi/msg/: rio_to_pc.msg  test.msg
navi/script/: path_record (copy).txt  path_record.py  path_record.txt  waypoint.py
navi/src/: c_ekf.cpp  c_ekf.h  control.cpp  control_3.cpp  main.cpp  main.h
navi/waypoint_files/: Free.yaml  points_outdoor.txt  waypoint.txt
navi/waypoint_files/src/: CoordinateConv.cpp  c_ekf.cpp  main.cpp  main.h
simple_navigation_goals/: CMakeLists.txt  package.xml
simple_navigation_goals/src/: simple_navigation_goals.cpp
